# fieldnotes-rag-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SAFETY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  design.md  evaluation.md  scoring.md  troubleshooting.md
examples/: benchmark.py  demo_queries.py  eval_fixtures.json  expected_output.txt  explain_query.py
examples/field_corpus/: bird_sightings.md  macroinvertebrate_survey.md  observation_protocol.md  plant_observations.md  riparian_habitat.md  safety_checklist.md  species_notes.md  weather_observations.md
fieldnotes_rag/: __init__.py  chunker.py  citation.py  cli.py  config.py  evaluator.py  exceptions.py  index.py  loader.py  models.py  query_expansion.py  retriever.py  synthesis.py  tokenizer.py  utils.py
tests/: test_chunker.py  test_cli.py  test_index.py  test_loader.py  test_query_expansion.py  test_regression.py  test_retrieval.py  test_synthesis.py  test_tokenizer.py
