[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fieldnotes-rag"
version = "0.1.0"
description = "Local-first RAG pipeline for field research notebooks — retrieve from field-guide notes, species observations, and safety checklists with citations."
authors = [{ name = "Abdul Salam", email = "124217275+get2salam@users.noreply.github.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["rag", "retrieval-augmented-generation", "field-notes", "nlp", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
fieldnotes = "fieldnotes_rag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fieldnotes_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["fieldnotes_rag"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
